==> Embedfire-gd32/ebf_gd32vf103_code/EBF_GD32VF103-Core-Board_Demo/GD32VF103V_EVAL_Demo_Suites/Projects/Synthetic_Test/Utilities/BSP/lcd/bsp_ili9341_lcd.c <==
#include "./lcd/bsp_ili9341_lcd.h"
#include "./font/fonts.h"

static void ILI9341_GPIO_Config ( void )
{
	/* GPIO clock enable */
	rcu_periph_clock_enable(RCU_GPIOD);
	rcu_periph_clock_enable(RCU_GPIOE);
	rcu_periph_clock_enable(RCU_AF);
	rcu_periph_clock_enable(ILI9341_RST_CLK);
	rcu_periph_clock_enable(ILI9341_BK_CLK);

	gpio_pin_remap_config(GPIO_EXMC_NADV_REMAP, ENABLE);    // 没有用到 EXMC_NADV 信号，重映射使其可以用于其他外设

	/* configure EXMC_D[0~15]*/
	/* PD14(EXMC_D0), PD15(EXMC_D1),PD0(EXMC_D2), PD1(EXMC_D3), PD8(EXMC_D13), PD9(EXMC_D14), PD10(EXMC_D15) */
	gpio_init(GPIOD, GPIO_MODE_AF_PP, GPIO_OSPEED_50MHZ, GPIO_PIN_0 | GPIO_PIN_1| GPIO_PIN_8 | GPIO_PIN_9 |
														GPIO_PIN_10 | GPIO_PIN_14 | GPIO_PIN_15);

	/* PE7(EXMC_D4), PE8(EXMC_D5), PE9(EXMC_D6), PE10(EXMC_D7), PE11(EXMC_D8), PE12(EXMC_D9),
			PE13(EXMC_D10), PE14(EXMC_D11), PE15(EXMC_D12) */
	gpio_init(GPIOE, GPIO_MODE_AF_PP, GPIO_OSPEED_50MHZ, GPIO_PIN_7 | GPIO_PIN_8 | GPIO_PIN_9 |
														GPIO_PIN_10 | GPIO_PIN_11 | GPIO_PIN_12 |
														GPIO_PIN_13 | GPIO_PIN_14 | GPIO_PIN_15);

	/* configure PD11(EXMC_A16) */
	gpio_init(GPIOD, GPIO_MODE_AF_PP, GPIO_OSPEED_50MHZ, GPIO_PIN_11);

	/* configure NOE and NWE */
	gpio_init(GPIOD, GPIO_MODE_AF_PP, GPIO_OSPEED_50MHZ, GPIO_PIN_4 | GPIO_PIN_5);

	/* configure EXMC NE0 */
	gpio_init(GPIOD, GPIO_MODE_AF_PP, GPIO_OSPEED_50MHZ, GPIO_PIN_7);
	

  /* 配置LCD复位RST控制管脚*/
	gpio_init(ILI9341_RST_PORT, GPIO_MODE_OUT_PP, GPIO_OSPEED_50MHZ, ILI9341_RST_PIN);
	
	
	/* 配置LCD背光控制管脚BK*/
	gpio_init(ILI9341_BK_PORT, GPIO_MODE_OUT_PP, GPIO_OSPEED_50MHZ, ILI9341_BK_PIN);
}

void ILI9341_BackLed_Control (ControlStatus enumState )
{
	if ( enumState )
		gpio_bit_reset ( ILI9341_BK_PORT, ILI9341_BK_PIN );
	else
		gpio_bit_set ( ILI9341_BK_PORT, ILI9341_BK_PIN );
		
}

void ILI9341_Rst ( void )
{			
	gpio_bit_reset ( ILI9341_RST_PORT, ILI9341_RST_PIN );	 //低电平复位

	ILI9341_Delay ( 0xAFF ); 					   

	gpio_bit_set ( ILI9341_RST_PORT, ILI9341_RST_PIN );

	ILI9341_Delay ( 0xAFF ); 	
	
}

static uint16_t ILI9341_Read_PixelData ( void )	
{	
	uint16_t usR=0, usG=0, usB=0 ;

	
	ILI9341_Write_Cmd ( 0x2E );   /* 读数据 */
	
	usR = ILI9341_Read_Data (); 	/*FIRST READ OUT DUMMY DATA*/
	
	usR = ILI9341_Read_Data ();  	/*READ OUT RED DATA  */
	usB = ILI9341_Read_Data ();  	/*READ OUT BLUE DATA*/
	usG = ILI9341_Read_Data ();  	/*READ OUT GREEN DATA*/	
	
  return ( ( ( usR >> 11 ) << 11 ) | ( ( usG >> 10 ) << 5 ) | ( usB >> 11 ) );
	
}
